--- a/package.json
+++ b/package.json
@@ -2,8 +2,86 @@
   "name": "chrome-extension-reloader",
   "version": "0.1.0",
   "description": "Watch for changes and force the reload of chrome extensions",
-  "main": "index.js",
   "repository": "git@github.com:Joaquin6/chrome-extension-reloader.git",
   "author": "joaquin6 <joaquinbriceno1@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "webpack",
+    "plugin",
+    "chrome",
+    "extension",
+    "hot-reload"
+  ],
+  "main": "dist/webpack-chrome-extension-reloader.js",
+  "types": "typings/webpack-chrome-extension-reloader.d.ts",
+  "bin": {
+    "wcer": "./dist/wcer.js"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production webpack",
+    "test": "NODE_ENV=test webpack && mocha dist/tests.js",
+    "watch": "NODE_ENV=development webpack --watch",
+    "analyze": "NODE_ENV=production webpack --env.analyze",
+    "sample": "NODE_ENV=development webpack --config sample/webpack.plugin.js --watch",
+    "prepublish": "yarn build",
+    "format": "prettier --write \"{src,client}/**/*.ts\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format",
+      "pre-push": "yarn test"
+    }
+  },
+  "dependencies": {
+    "colors": "^1.1.2",
+    "lodash": "^4.17.4",
+    "minimist": "^1.2.0",
+    "webpack-sources": "^1.0.1",
+    "ws": "^6.1.2"
+  },
+  "peerDependencies": {
+    "webpack": ">=2 <5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@types/chai": "^4.0.0",
+    "@types/chrome": "^0.0.79",
+    "@types/colors": "^1.1.3",
+    "@types/lodash": "^4.14.120",
+    "@types/minimist": "^1.2.0",
+    "@types/mocha": "^5.2.5",
+    "@types/sinon": "^7.0.0",
+    "@types/webpack": "^4.4.20",
+    "@types/ws": "^6.0.1",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.0",
+    "chai": "^4.0.2",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.0.0",
+    "husky": "^1.2.0",
+    "json-loader": "^0.5.4",
+    "memory-fs": "^0.4.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "mocha": "^5.2.0",
+    "prettier": "^1.8.2",
+    "raw-loader": "^1.0.0",
+    "sinon": "^7.1.1",
+    "source-map-support": "^0.5.9",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.1",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-loader": "^3.6.0",
+    "typescript": "^3.2.1",
+    "webpack": "^4.26.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2"
+  }
 }
